{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 77,
  "lineage": "67a31f32-017b-2ea9-1e1b-b8c62742ebba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01592e656a60d42d7",
            "association_id": "eipassoc-05fb379fff05ec698",
            "domain": "vpc",
            "id": "eipalloc-01592e656a60d42d7",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0165dd349cc8a9cc8",
            "private_dns": "ip-10-0-4-108.us-west-2.compute.internal",
            "private_ip": "10.0.4.108",
            "public_dns": "ec2-52-27-5-79.us-west-2.compute.amazonaws.com",
            "public_ip": "52.27.5.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT gateway EIP"
            },
            "tags_all": {
              "Name": "NAT gateway EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ing",
            "aws_vpc.wiskey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b28dfc7adc325ef4",
            "arn": "arn:aws:ec2:us-west-2:212889954543:instance/i-034123d4fdf858713",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034123d4fdf858713",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f1692ef93298b4c1",
            "private_dns": "ip-10-0-2-122.us-west-2.compute.internal",
            "private_ip": "10.0.2.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-079387d1b79d19312",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01be27133b0af8373",
            "tags": {
              "Name": "DB_Server_0",
              "Owner": "Marina",
              "Purpose": "DB server"
            },
            "tags_all": {
              "Name": "DB_Server_0",
              "Owner": "Marina",
              "Purpose": "DB server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00e14b2a627a854a6"
            ]
          },
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_subnet.privet",
            "aws_vpc.wiskey_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b28dfc7adc325ef4",
            "arn": "arn:aws:ec2:us-west-2:212889954543:instance/i-09bf880b8cd1583d5",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09bf880b8cd1583d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01541506f0ae1ca02",
            "private_dns": "ip-10-0-2-30.us-west-2.compute.internal",
            "private_ip": "10.0.2.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07037eaed144891d8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01be27133b0af8373",
            "tags": {
              "Name": "DB_Server_1",
              "Owner": "Marina",
              "Purpose": "DB server"
            },
            "tags_all": {
              "Name": "DB_Server_1",
              "Owner": "Marina",
              "Purpose": "DB server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00e14b2a627a854a6"
            ]
          },
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_subnet.privet",
            "aws_vpc.wiskey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b28dfc7adc325ef4",
            "arn": "arn:aws:ec2:us-west-2:212889954543:instance/i-02143606642d5eb86",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:212889954543:key/3ac2fe82-a8ed-4925-a6ef-7099346206fc",
                "throughput": 0,
                "volume_id": "vol-08b052795dbac9593",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02143606642d5eb86",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-066d1c445660f77ed",
            "private_dns": "ip-10-0-4-75.us-west-2.compute.internal",
            "private_ip": "10.0.4.75",
            "public_ip": "54.69.35.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0649c0a39ec90ba5c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d70b996940be93ea",
            "tags": {
              "Name": "Web_Server_0",
              "Owner": "Marina",
              "Purpose": "web server"
            },
            "tags_all": {
              "Name": "Web_Server_0",
              "Owner": "Marina",
              "Purpose": "web server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ca0a29d75dcf218c"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.wiskey_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b28dfc7adc325ef4",
            "arn": "arn:aws:ec2:us-west-2:212889954543:instance/i-0e7e8fdb8a7a64321",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:212889954543:key/3ac2fe82-a8ed-4925-a6ef-7099346206fc",
                "throughput": 0,
                "volume_id": "vol-09b004a03124a1d67",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7e8fdb8a7a64321",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-063a1c6f8ff5d3d6d",
            "private_dns": "ip-10-0-5-59.us-west-2.compute.internal",
            "private_ip": "10.0.5.59",
            "public_ip": "18.236.178.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06a606282f821cfca",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a98591eecac21ad9",
            "tags": {
              "Name": "Web_Server_1",
              "Owner": "Marina",
              "Purpose": "web server"
            },
            "tags_all": {
              "Name": "Web_Server_1",
              "Owner": "Marina",
              "Purpose": "web server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ca0a29d75dcf218c"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.wiskey_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212889954543:internet-gateway/igw-023935cc7b7fda489",
            "id": "igw-023935cc7b7fda489",
            "owner_id": "212889954543",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-079724d4739c0db41"
          },
          "dependencies": [
            "aws_vpc.wiskey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:212889954543:loadbalancer/app/webServersLB/fc8301de3edd5755",
            "arn_suffix": "app/webServersLB/fc8301de3edd5755",
            "desync_mitigation_mode": "defensive",
            "dns_name": "webServersLB-1353608795.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:212889954543:loadbalancer/app/webServersLB/fc8301de3edd5755",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webServersLB",
            "security_groups": [
              "sg-0ca0a29d75dcf218c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a98591eecac21ad9"
              },
              {
                "subnet_id": "subnet-0d70b996940be93ea"
              }
            ],
            "subnets": [
              "subnet-0a98591eecac21ad9",
              "subnet-0d70b996940be93ea"
            ],
            "tags": {
              "Name": "appLoadBalancer"
            },
            "tags_all": {
              "Name": "appLoadBalancer"
            },
            "vpc_id": "vpc-079724d4739c0db41",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.wiskey_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:212889954543:listener/app/webServersLB/fc8301de3edd5755/e7e43a3f96be977b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:212889954543:targetgroup/web-target-group/874d03f7bde544a5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:212889954543:listener/app/webServersLB/fc8301de3edd5755/e7e43a3f96be977b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:212889954543:loadbalancer/app/webServersLB/fc8301de3edd5755",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web-servers",
            "aws_lb_target_group.web",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.wiskey_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:212889954543:targetgroup/web-target-group/874d03f7bde544a5",
            "arn_suffix": "targetgroup/web-target-group/874d03f7bde544a5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:212889954543:targetgroup/web-target-group/874d03f7bde544a5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web-target-group"
            },
            "tags_all": {
              "Name": "web-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-079724d4739c0db41"
          },
          "dependencies": [
            "aws_vpc.wiskey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:212889954543:targetgroup/web-target-group/874d03f7bde544a5-20220225231336645700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:212889954543:targetgroup/web-target-group/874d03f7bde544a5",
            "target_id": "i-02143606642d5eb86"
          },
          "dependencies": [
            "aws_instance.web-server",
            "aws_lb_target_group.web",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.wiskey_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:212889954543:targetgroup/web-target-group/874d03f7bde544a5-20220225231336613600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:212889954543:targetgroup/web-target-group/874d03f7bde544a5",
            "target_id": "i-0e7e8fdb8a7a64321"
          },
          "dependencies": [
            "aws_instance.web-server",
            "aws_lb_target_group.web",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.wiskey_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01592e656a60d42d7",
            "connectivity_type": "public",
            "id": "nat-084d961ab03b05d1f",
            "network_interface_id": "eni-0165dd349cc8a9cc8",
            "private_ip": "10.0.4.108",
            "public_ip": "52.27.5.79",
            "subnet_id": "subnet-0d70b996940be93ea",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ing",
            "aws_subnet.public",
            "aws_vpc.wiskey_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212889954543:route-table/rtb-0fdc4cf140bf75e34",
            "id": "rtb-0fdc4cf140bf75e34",
            "owner_id": "212889954543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-084d961ab03b05d1f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table"
            },
            "tags_all": {
              "Name": "private route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-079724d4739c0db41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_vpc.wiskey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212889954543:route-table/rtb-0ba5ba6646b292c83",
            "id": "rtb-0ba5ba6646b292c83",
            "owner_id": "212889954543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023935cc7b7fda489",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route table"
            },
            "tags_all": {
              "Name": "Public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-079724d4739c0db41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ing",
            "aws_vpc.wiskey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0079c4da78e4f41b1",
            "route_table_id": "rtb-0fdc4cf140bf75e34",
            "subnet_id": "subnet-01be27133b0af8373"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ing",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.privat",
            "aws_subnet.privet",
            "aws_subnet.public",
            "aws_vpc.wiskey_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0640f52c69b39ab5e",
            "route_table_id": "rtb-0ba5ba6646b292c83",
            "subnet_id": "subnet-0d70b996940be93ea"
          },
          "dependencies": [
            "aws_internet_gateway.ing",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.wiskey_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212889954543:security-group/sg-00e14b2a627a854a6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow outbound traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e14b2a627a854a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh access from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DB-sg",
            "name_prefix": "",
            "owner_id": "212889954543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB-sg"
            },
            "tags_all": {
              "Name": "DB-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-079724d4739c0db41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wiskey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212889954543:security-group/sg-0ca0a29d75dcf218c",
            "description": "Allow ssh and standard http/https ports inbound and everything outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca0a29d75dcf218c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web sg",
            "name_prefix": "",
            "owner_id": "212889954543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Terraform": "true"
            },
            "tags_all": {
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-079724d4739c0db41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wiskey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DB_outbound_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-2856225446",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00e14b2a627a854a6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_vpc.wiskey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "DB_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow ssh access from anywhere",
            "from_port": 22,
            "id": "sgrule-166372307",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e14b2a627a854a6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_vpc.wiskey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212889954543:subnet/subnet-01be27133b0af8373",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01be27133b0af8373",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212889954543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Privet Subnet"
            },
            "tags_all": {
              "Name": "Privet Subnet"
            },
            "vpc_id": "vpc-079724d4739c0db41"
          },
          "dependencies": [
            "aws_vpc.wiskey_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212889954543:subnet/subnet-0d70b996940be93ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d70b996940be93ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212889954543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-079724d4739c0db41"
          },
          "dependencies": [
            "aws_vpc.wiskey_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212889954543:subnet/subnet-0a98591eecac21ad9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a98591eecac21ad9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "212889954543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-079724d4739c0db41"
          },
          "dependencies": [
            "aws_vpc.wiskey_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wiskey_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:212889954543:vpc/vpc-079724d4739c0db41",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db0c4a3b2515ed86",
            "default_route_table_id": "rtb-09477eb8747c8cc30",
            "default_security_group_id": "sg-0f481b6ae0c55bcd0",
            "dhcp_options_id": "dopt-0a1918b8503c81030",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-079724d4739c0db41",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09477eb8747c8cc30",
            "owner_id": "212889954543",
            "tags": {
              "Name": "Main VPC"
            },
            "tags_all": {
              "Name": "Main VPC"
            }
          }
        }
      ]
    }
  ]
}